--- a/MDK-ARM/STM32DBUSTest.uvprojx
+++ b/MDK-ARM/STM32DBUSTest.uvprojx
@@ -10,6 +10,7 @@
       <TargetName>STM32DBUSTest</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pCCUsed>6190000::V6.19::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
